# VibeVision

./: .gitignore  README.md  start-vibevision.bat
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py  seed.py  workflows.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/routers/: admin.py  telegram.py
backend/app/services/: bot_help.py  comfyui.py  concurrency.py  credits.py  error_details.py  gpu_memory.py  intent.py  orchestrator.py  service_monitor.py  task_queue_worker.py  task_recovery.py  task_runner.py  telegram.py  telegram_poller.py  telegram_update_queue.py  users.py
backend/app/workflow_templates/: flux2klein_single_edit_api.json  z_image_turbo_text_to_image_api.json
backend/tests/: test_admin_seed.py  test_bot_help.py  test_comfyui_client.py  test_credits.py  test_gpu_memory.py  test_intent_service.py  test_orchestrator_preflight.py  test_settings.py  test_task_runner_commands.py  test_telegram_client.py  test_workflow_templates.py
config/: vibevision.env
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  mockData.ts  styles.css  types.ts
scripts/: bootstrap-start.ps1  restart-comfyui.ps1  restart-ollama.ps1  restart-vibevision.ps1  start-all.ps1  start-backend.ps1  start-comfyui.ps1  start-frontend.ps1  start-ollama.ps1  start-task-worker.ps1  start-telegram-poller.ps1  stop-all.ps1  stop-comfyui.ps1  stop-ollama.ps1  telegram-webhook.ps1  vibevision-control.ps1
